*SAVARA-210, added desktop background. * Added setting buttons. * Added application's toolbar button into toolbar once it is open.

--- a/console/src/main/webapp/ConsoleModule.css
+++ b/console/src/main/webapp/ConsoleModule.css
@@ -1,3 +1,6 @@
 /** Add css rules here for your application. */
 
-body{margin:0}
+body{
+    margin:0;
+    background-image:url(images/desktop_savara.jpg);
+}
